--- a/app/views/pages/new_project.html.erb
+++ b/app/views/pages/new_project.html.erb
@@ -9,7 +9,7 @@
 <div class="row">
   <div class="col-lg-13 mx-auto">
     <div class="st-Sheet">
-      <div class="st-Sheet_Header">
+      <div class="st-Sheet_Header st-Sheet_Header-mb">
         <h1 class="sw-Content_Title">
           新しいプロジェクト
         </h1>
