--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -19,7 +19,7 @@
         <h1 class="sw-Content_Title">
           プロダクトバックログ
         </h1>
-        <div class="ml-auto">
+        <div class="st-Sheet_HeaderActions">
           <%= link_to page_url(:new_product_backlog_item), class: 'btn btn-sm btn-outline-success' do -%>
             <i class="fa fa-plus"></i>
             追加する
