--- a/app/views/pages/project_list.html.erb
+++ b/app/views/pages/project_list.html.erb
@@ -6,7 +6,7 @@
         <h1 class="sw-Content_Title">
           あなたのプロジェクト
         </h1>
-        <div class="ml-auto">
+        <div class="st-Sheet_HeaderActions">
           <%= link_to page_url(:new_project), class: 'btn btn-sm btn-outline-success' do -%>
             <i class="fa fa-plus"></i>
             追加する
