--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -1,10 +1,6 @@
-.prjl-List {
-  @include paper;
-}
-
 .prjl-Item {
   @extend .d-flex;
-  padding: 1.5rem 2rem 1rem 1.5rem;
+  padding: 1.25rem 0 .75rem;
   border-bottom: 1px solid $app-color-gray1;
 
   &:last-child {
