--- a/app/assets/stylesheets/structure.scss
+++ b/app/assets/stylesheets/structure.scss
@@ -8,15 +8,17 @@
 }
 
 .st-Sheet_Header {
-  @extend .d-flex;
+  @extend .d-flex, .align-items-center;
   padding: $app-space-y 0 0;
-  margin: 0 $app-space-x;
-  margin-bottom: $app-space-y;
+  margin: 0 $app-space-x 1rem;
+
+  &-mb {
+    margin-bottom: $app-space-y;
+  }
 }
 
-.st-Header_Actions {
-  @extend .d-flex, .align-items-center;
-  @extend .ml-auto;
+.st-Sheet_HeaderActions {
+  margin-left: 1rem;
 }
 
 .st-Sheet_Body {
