--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -14,40 +14,51 @@
 </div>
 <div class="row">
   <div class="col-lg-16 mx-auto">
-    <div class="st-GroundBlock">
-      <div class="st-GroundBlock_Header">
+    <div class="st-Sheet">
+      <div class="st-Sheet_Header">
         <h1 class="sw-Content_Title">
           プロダクトバックログ
         </h1>
-        <span class="st-GroundBlock_Line"></span>
-        <div class="ml-auto">
+        <div class="st-Sheet_HeaderActions">
           <%= link_to page_url(:new_product_backlog_item), class: 'btn btn-sm btn-outline-success' do -%>
             <i class="fa fa-plus"></i>
             追加する
           <% end -%>
         </div>
+        <div class="ml-auto">
+          <div class="dropdown">
+            <a id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fa fa-ellipsis-h" style="cursor:pointer;font-size:1.5rem;"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="st-GroundBlock_Body">
+      <div class="st-Sheet_Body">
         <div class="pbl-List">
           <% items.each do |i| -%>
-            <%= link_to page_url(:product_backlog_item), class: 'pbl-Item' do %>
-              <div class="pbl-Item_Header">
-                <i class="pbl-Item_Handle"></i>
-              </div>
-              <div class="pbl-Item_Body">
-                <span class="pbl-Item_Id">
-                  #<%= i[:id] %>
-                </span>
-                <p class="pbl-Item_Content">
-                  <%= i[:content].join('<br>').html_safe %>
-                </p>
-              </div>
-              <div class="pbl-Item_Tail">
-                <div class="pbl-Item_Amount">
-                  <%= i[:point] %>
+            <div class="pbl-Item">
+              <i class="pbl-Item_Handle"></i>
+              <%= link_to page_url(:product_backlog_item), class: 'pbl-Item_Main' do %>
+                <div class="pbl-Item_Body">
+                  <span class="pbl-Item_Id">
+                    #<%= i[:id] %>
+                  </span>
+                  <p class="pbl-Item_Content">
+                    <%= i[:content].join('<br>').html_safe %>
+                  </p>
                 </div>
-              </div>
-            <% end -%>
+                <div class="pbl-Item_Tail">
+                  <span class="pbl-Item_Amount">
+                    <%= i[:point] %>
+                  </span>
+                </div>
+              <% end -%>
+            </div>
           <% end -%>
         </div>
       </div>
