--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,12 @@
 @import 'bootstrap/functions';
 @import 'bootstrap_variables';
 @import 'bootstrap';
-
 @import 'font-awesome';
+
+@import 'mixins';
+@import 'navigation';
+@import 'user';
+
+body {
+  padding-bottom: 3rem;
+}
