--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -1,17 +1,15 @@
 .nav-link,
 .dropdown-item {
-  font-size: $app-font-size;
   text-decoration: none;
 }
 
 .nav-Global {
-  background-color: rgba(255,255,255,.6) !important;
-  border-bottom: 1px solid $app-color-gray1;
+  background-color: rgba(255,255,255,.9) !important;
 }
 
 .nav-Global_AppName {
-  color: $app-color-primary !important;
-  font-size: $app-font-size-lg;
+  color: theme-color('primary') !important;
+  font-size: $font-size-lg;
   font-weight: bold;
   text-decoration: none;
 }
@@ -19,20 +17,20 @@
 .breadcrumbs {
   @include nf;
   display: inline-block;
-  font-size: $app-font-size-sm;
+  font-size: $font-size-sm;
   margin: 1rem auto;
 
   a {
     &:after {
       @include fa-content('\f138');
       display: inline-block;
-      color: $app-color-gray4;
+      color: $gray-400;
       margin: 0 .5rem;
     }
   }
 
   .current {
-    background-color: $app-color-gray5;
+    background-color: $gray-500;
     color: #FFF;
     padding: .25rem .675rem;
     border-radius: 1rem;
