--- a/app/assets/stylesheets/bootstrap_variables.scss
+++ b/app/assets/stylesheets/bootstrap_variables.scss
@@ -1,13 +1,13 @@
 $white:    #fff !default;
-$gray-100: #e9ecef !default;
-$gray-200: #aaacae !default;
-$gray-300: #71777c !default;
-$gray-400: #60666c !default;
-$gray-500: #3D454C !default;
-$gray-600: #6c757d !default;
-$gray-700: #495057 !default;
-$gray-800: #343a40 !default;
-$gray-900: #7F7E63 !default;
+$gray-100: #F1F2F4 !default;
+$gray-200: #e9ecef !default;
+$gray-300: #D4D7DA !default;
+$gray-400: #BFC2C4 !default;
+$gray-500: #AAACAE !default;
+$gray-600: #959799 !default;
+$gray-700: #71777c !default;
+$gray-800: #60666c !default;
+$gray-900: #3D454C !default;
 $black:    #1C2023 !default;
 
 $blue:    #528CB1 !default;
@@ -22,7 +22,7 @@ $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
 $primary:       $purple !default;
-$secondary:     $gray-600 !default;
+$secondary:     #7F7E63 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $orange !default;
