--- a/app/assets/stylesheets/bootstrap_variables.scss
+++ b/app/assets/stylesheets/bootstrap_variables.scss
@@ -32,7 +32,7 @@ $dark:          $gray-800 !default;
 
 $spacer: 1rem !default;
 
-$body-bg:                   #FDFEFB;
+$body-bg:                   #F9F9EF;
 $body-color:                $black;
 
 $link-color:                $blue !default;
