--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,8 +4,10 @@
 @import 'font-awesome';
 
 @import 'mixins';
+@import 'icons';
 @import 'navigation';
 @import 'user';
+@import 'product_backlog';
 
 body {
   padding-bottom: 3rem;
