--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -1,3 +1,4 @@
+a.btn,
 .nav-link,
 .dropdown-item {
   text-decoration: none;
@@ -17,22 +18,25 @@
 .breadcrumbs {
   @include nf;
   display: inline-block;
-  font-size: $font-size-sm;
-  margin: 1rem auto;
+  margin: 1rem auto 2rem;
 
   a {
+    &:first-child {
+      font-size: $font-size-lg;
+      font-weight: bold;
+    }
+
     &:after {
       @include fa-content('\f138');
       display: inline-block;
       color: $gray-500;
-      margin: 0 .5rem;
+      font-size: $font-size-base;
+      margin: 0 .675rem;
     }
   }
 
   .current {
-    background-color: $gray-900;
-    color: #FFF;
-    padding: .25rem .675rem;
-    border-radius: 1rem;
+    margin-left: -0.25rem;
+    color: $gray-900;
   }
 }
