--- a/app/assets/stylesheets/bootstrap_variables.scss
+++ b/app/assets/stylesheets/bootstrap_variables.scss
@@ -57,6 +57,7 @@ $font-family-sans-serif:      'Rounded Mplus 1c', -apple-system, BlinkMacSystemF
 
 $font-size-base:              .875rem !default; // Assumes the browser default, typically `16px`
 
+$paragraph-margin-bottom:     0 !default;
 $headings-margin-bottom:      0 !default;
 
 $navbar-padding-y:            .125rem;
