--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -1,3 +1,9 @@
+@mixin card($bg: $white) {
+  border-radius: .5rem;
+  box-shadow: 0 0 5px $gray-100;
+  background-color: $bg;
+}
+
 @mixin paper($bg: #FFF) {
   border-radius: .3rem;
   box-shadow: 0 0 10px $gray-200;
