--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -10,12 +10,60 @@
   <div class="col">
     <div class="pbl-Container">
       <div class="pbl-Container_Header">
-        <%= link_to page_url(:new_feature), class: 'btn btn-success' do %>
+        <%= link_to page_url(:new_feature), class: 'btn btn-sm btn-success' do %>
           <i class="icon-Add icon-Prefix"></i>
           新しいフィーチャーを追加
         <% end -%>
       </div>
-      <div class="pbl-Container_Body">
+      <div class="col-lg-12 pbl-Container_Body">
+        <div class="fe-Container">
+          <div class="fe-Header">
+            <span class="fe-Number">
+              #121
+            </span>
+            <span class="fe-ContentName">
+              Feature
+            </span>
+          </div>
+          <div class="fe-Body">
+            <p class="fe-Content">
+              訪問者として、ユーザー登録の詳細を知りたい<br>
+              それは、自身の個人情報がどう取り扱われるか知りたいから
+            </p>
+          </div>
+        </div>
+        <div class="fe-Container">
+          <div class="fe-Header">
+            <span class="fe-Number">
+              #122
+            </span>
+            <span class="fe-ContentName">
+              Feature
+            </span>
+          </div>
+          <div class="fe-Body">
+            <p class="fe-Content">
+              ユーザーとして、今のTodoリストを保存したい<br>
+              それは、再度アクセスした時に再開したいから
+            </p>
+          </div>
+        </div>
+        <div class="fe-Container">
+          <div class="fe-Header">
+            <span class="fe-Number">
+              #123
+            </span>
+            <span class="fe-ContentName">
+              Feature
+            </span>
+          </div>
+          <div class="fe-Body">
+            <p class="fe-Content">
+              ユーザーとして、保存ボタンを押すことなくリストを保存したい<br>
+              それは、保存することを忘れることがあるから
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
