--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -16,52 +16,37 @@
         <% end -%>
       </div>
       <div class="col-lg-12 pbl-Container_Body">
-        <div class="fe-Container">
-          <div class="fe-Header">
-            <span class="fe-Number">
-              #121
-            </span>
-            <span class="fe-ContentName">
-              Feature
-            </span>
-          </div>
-          <div class="fe-Body">
+        <div class="fe-Summary">
+          <div class="fe-Summary_Body">
+            <i class="fe-Anchor"></i>
             <p class="fe-Content">
-              訪問者として、ユーザー登録の詳細を知りたい<br>
-              それは、自身の個人情報がどう取り扱われるか知りたいから
+              ユーザー登録の説明
             </p>
+            <span class="fe-Point">
+              1
+            </span>
           </div>
         </div>
-        <div class="fe-Container">
-          <div class="fe-Header">
-            <span class="fe-Number">
-              #122
-            </span>
-            <span class="fe-ContentName">
-              Feature
-            </span>
-          </div>
-          <div class="fe-Body">
+        <div class="fe-Summary">
+          <div class="fe-Summary_Body">
+            <i class="fe-Anchor"></i>
             <p class="fe-Content">
-              ユーザーとして、今のTodoリストを保存したい<br>
-              それは、再度アクセスした時に再開したいから
+              Todoリストの自動保存
             </p>
+            <span class="fe-Point">
+              13
+            </span>
           </div>
         </div>
-        <div class="fe-Container">
-          <div class="fe-Header">
-            <span class="fe-Number">
-              #123
-            </span>
-            <span class="fe-ContentName">
-              Feature
-            </span>
-          </div>
-          <div class="fe-Body">
+        <div class="fe-Summary">
+          <div class="fe-Summary_Body">
+            <i class="fe-Anchor"></i>
             <p class="fe-Content">
-              ユーザーとして、保存ボタンを押すことなくリストを保存したい<br>
-              それは、保存することを忘れることがあるから
+              リマインド間隔設定
             </p>
+            <span class="fe-Point">
+              8
+            </span>
           </div>
         </div>
       </div>
