--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -16,14 +16,13 @@ a.btn,
 }
 
 .breadcrumbs {
-  @include nf;
-  display: inline-block;
   margin: 1rem auto 0;
+  line-height: 1.5;
+  font-weight: bold;
 
   a {
     &:first-child {
       font-size: $font-size-lg;
-      font-weight: bold;
     }
 
     &:after {
@@ -31,12 +30,11 @@ a.btn,
       display: inline-block;
       color: $gray-500;
       font-size: $font-size-base;
-      margin: 0 .675rem;
+      margin: 0 .5rem 0 .75rem;
     }
   }
 
   .current {
-    margin-left: -0.25rem;
     color: $gray-900;
   }
 }
