--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,8 @@
 
 @import 'mixins';
 @import 'icons';
+@import 'form';
+@import 'site_wide';
 @import 'navigation';
 @import 'user';
 @import 'product_backlog';
