--- a/app/assets/stylesheets/bootstrap_variables.scss
+++ b/app/assets/stylesheets/bootstrap_variables.scss
@@ -59,6 +59,7 @@ $font-size-base:              .875rem !default; // Assumes the browser default, 
 
 $paragraph-margin-bottom:     0 !default;
 $headings-margin-bottom:      0 !default;
+$label-margin-bottom:         .25rem !default;
 
 $navbar-padding-y:            .125rem;
 
