--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,8 @@
 <ul>
   <li>
+    <%= link_to 'New Feature', page_url(:new_feature) %>
+  </li>
+  <li>
     <%= link_to 'Product Backlog', page_url(:product_backlog) %>
   </li>
 </ul>
