--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
   <div class="col">
-    <div class="pbl-Container">
+    <div class="sw-Main">
       <div class="pbl-Container_Header">
         <%= link_to page_url(:new_feature), class: 'btn btn-sm btn-success' do %>
           <i class="icon-Add icon-Prefix"></i>
@@ -16,7 +16,7 @@
         <% end -%>
       </div>
       <div class="col-lg-12 pbl-Container_Body">
-        <div class="fe-Summary">
+        <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
             <p class="fe-Content">
@@ -27,7 +27,7 @@
             </span>
           </div>
         </div>
-        <div class="fe-Summary">
+        <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
             <p class="fe-Content">
@@ -38,7 +38,7 @@
             </span>
           </div>
         </div>
-        <div class="fe-Summary">
+        <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
             <p class="fe-Content">
