--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -18,11 +18,11 @@ a.btn,
 .breadcrumbs {
   margin: 1rem auto 0;
   line-height: 1.5;
-  font-weight: bold;
 
   a {
     &:first-child {
-      font-size: $font-size-lg;
+      font-weight: bold;
+      font-size: 1.25rem;
     }
 
     &:after {
@@ -35,6 +35,7 @@ a.btn,
   }
 
   .current {
+    font-weight: bold;
     color: $gray-900;
   }
 }
