--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -19,9 +19,7 @@
         <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
-            <p class="fe-Content">
-              ユーザー登録の説明
-            </p>
+            <%= link_to 'ユーザー登録の説明', page_url(:show_feature), class: 'fe-Content' %>
             <span class="fe-Point">
               1
             </span>
