--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,4 +5,7 @@
   <li>
     <%= link_to 'Product Backlog', page_url(:product_backlog) %>
   </li>
+  <li>
+    <%= link_to 'Feature Detail', page_url(:show_feature) %>
+  </li>
 </ul>
