--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -19,8 +19,8 @@
         <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
-            <%= link_to 'ユーザー登録の説明', page_url(:show_feature), class: 'fe-Content' %>
-            <span class="fe-Point">
+            <%= link_to 'ユーザー登録の説明', page_url(:show_feature), class: 'fe-Title' %>
+            <span class="fe-Point fe-Summary_Point">
               1
             </span>
           </div>
@@ -28,10 +28,8 @@
         <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
-            <p class="fe-Content">
-              Todoリストの自動保存
-            </p>
-            <span class="fe-Point">
+            <%= link_to 'Todoリストの自動保存', page_url(:show_feature), class: 'fe-Title'  %>
+            <span class="fe-Point fe-Summary_Point">
               13
             </span>
           </div>
@@ -39,10 +37,8 @@
         <div class="fe-Background">
           <div class="fe-Summary_Body">
             <i class="fe-Anchor"></i>
-            <p class="fe-Content">
-              リマインド間隔設定
-            </p>
-            <span class="fe-Point">
+            <%= link_to 'リマインド設定間隔', page_url(:show_feature), class: 'fe-Title'  %>
+            <span class="fe-Point fe-Summary_Point">
               8
             </span>
           </div>
