--- a/app/views/pages/new_feature.html.erb
+++ b/app/views/pages/new_feature.html.erb
@@ -10,27 +10,25 @@
 <div class="row">
   <div class="col-lg-12 mx-auto">
     <div class="sw-Main">
-      <div class="fe-Background">
+      <div class="fe-Background fe-Background-lg">
         <form>
-          <div class="fe-Header">
-            <div class="form-group">
-              <label>
-                概要:
-              </label>
-              <input type="text" placeholder="フィーチャーをひとことで表すと？" class="form-control">
-            </div>
-            <div class="form-group">
-              <label>
-                詳細:
-              </label>
-              <textarea class="form-control" rows="3"></textarea>
-            </div>
-            <div class="frm-Actions">
-              <button class="btn btn-success">
-                追加する
-              </button>
-              <%= link_to 'キャンセル', page_url(:product_backlog), class: 'frm-Action_Cancel' %>
-            </div>
+          <div class="form-group">
+            <label>
+              タイトル:
+            </label>
+            <input type="text" placeholder="フィーチャーをひとことで表すと？" class="form-control">
+          </div>
+          <div class="form-group">
+            <label>
+              詳細:
+            </label>
+            <textarea class="form-control" rows="3"></textarea>
+          </div>
+          <div class="frm-Actions">
+            <button class="btn btn-success">
+              追加する
+            </button>
+            <%= link_to 'キャンセル', page_url(:product_backlog), class: 'frm-Action_Cancel' %>
           </div>
         </form>
       </div>
