--- a/app/views/pages/show_feature.html.erb
+++ b/app/views/pages/show_feature.html.erb
@@ -12,21 +12,21 @@
     <div class="sw-Main">
       <div class="fe-Background fe-Background-lg">
         <div class="fe-Detail">
-          <div class="fe-Detail_Section">
+          <div class="fe-Detail_Section sw-Editable">
             <h1 class="fe-Title fe-Title-lg">
               Todoリストの自動保存
             </h1>
-            <%= link_to '編集する', '#', class: 'fe-Detail_Edit sw-Link sw-Link-sm' %>
+            <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
           </div>
-          <div class="fe-Detail_Section">
+          <div class="fe-Detail_Section sw-Editable">
             <p class="fe-Description">
               ユーザーとして、Todoリストが自動で保存されて欲しい。
               <br>
               それは、保存するのを忘れることがあるからだ。
             </p>
-            <%= link_to '編集する', '#', class: 'fe-Detail_Edit sw-Link sw-Link-sm' %>
+            <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
           </div>
-          <div class="fe-Detail_Section">
+          <div class="fe-Detail_Section sw-Editable">
             <div class="fe-Detail_Point">
               <span class="fe-Point">
                 13
@@ -38,7 +38,69 @@
                 </span>
               <p>
             </div>
-            <%= link_to '編集する', '#', class: 'fe-Detail_Edit sw-Link sw-Link-sm' %>
+            <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+          </div>
+        </div>
+        <hr />
+        <div class="fe-AcceptanceCriteria">
+          <div class="fe-AcceptanceCriteria_Header">
+            <h2 class="fe-AcceptanceCriteria_Title">
+              受け入れ基準:
+            </h2>
+          </div>
+          <div class="fe-AcceptanceCriteria_Body">
+            <div class="fe-AcceptanceCriterion sw-Editable">
+              <i class="icon-Check icon-Check-disabled"></i>
+              <span class="fe-AcceptanceCriterion_Content">
+                タイトル編集後に自動保存されること
+              </span>
+              <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '削除する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+            </div>
+            <div class="fe-AcceptanceCriterion sw-Editable">
+              <i class="icon-Check icon-Check-disabled"></i>
+              <span class="fe-AcceptanceCriterion_Content">
+                Todo編集後に自動保存されること
+              </span>
+              <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '削除する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+            </div>
+            <div class="fe-AcceptanceCriterion sw-Editable">
+              <i class="icon-Check icon-Check-disabled"></i>
+              <span class="fe-AcceptanceCriterion_Content">
+                Todo削除後に自動保存されること
+              </span>
+              <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '削除する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+            </div>
+            <div class="fe-AcceptanceCriterion sw-Editable">
+              <i class="icon-Check icon-Check-disabled"></i>
+              <span class="fe-AcceptanceCriterion_Content">
+                Todo完了後に自動保存されること
+              </span>
+              <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '削除する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+            </div>
+            <div class="fe-AcceptanceCriterion sw-Editable">
+              <i class="icon-Check icon-Check-disabled"></i>
+              <span class="fe-AcceptanceCriterion_Content">
+                Todo未完了後に自動保存されること
+              </span>
+              <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+              <%= link_to '削除する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
+            </div>
+          </div>
+          <div class="fe-AcceptanceCriterionForm">
+            <form>
+              <div class="input-group">
+                <input type="text" class="form-control">
+                <div class="input-group-append">
+                  <button type="submit" class="btn btn-success">
+                    <i class="fa fa-plus"></i>
+                  </button>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
