--- a/app/assets/stylesheets/feature.scss
+++ b/app/assets/stylesheets/feature.scss
@@ -82,12 +82,12 @@
 }
 
 .fe-AcceptanceCriteria_Body {
-  margin-top: .5rem;
+  margin: .75rem 0;
 }
 
 .fe-AcceptanceCriterion {
   @extend .d-flex, .align-items-center;
-  margin-bottom: .5rem;
+  margin-bottom: .325rem;
 }
 
 .fe-AcceptanceCriterion_Content {
