--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,4 +8,7 @@
   <li>
     <%= link_to 'Feature Detail', page_url(:show_feature) %>
   </li>
+  <li>
+    <%= link_to 'Release Plan', page_url(:release_plan) %>
+  </li>
 </ul>
