--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -1,25 +1,19 @@
+@mixin padding-sm {
+  padding: .5rem 1rem;
+}
+
+@mixin padding-base {
+  padding: 1.25rem 1.75rem;
+}
+
 @mixin card($bg: $white) {
   border-radius: .5rem;
   box-shadow: 0 0 5px $gray-100;
   background-color: $bg;
 }
 
-@mixin paper($bg: #FFF) {
-  border-radius: .3rem;
-  box-shadow: 0 0 10px $gray-200;
-  background-color: $bg;
-}
-
 @mixin nf {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-
-@mixin heading($font-size: 1rem, $weight: bold) {
-  font-size: $font-size;
-  font-weight: $weight;
-  margin: 0;
-  line-height: 1;
-  color: $gray-500;
 }
 
 @mixin fa-content($content) {
