--- a/app/views/pages/release_plan.html.erb
+++ b/app/views/pages/release_plan.html.erb
@@ -13,16 +13,6 @@
         <%= line_chart(
           [
             {
-              name: '予測',
-              data: {
-                0 => 200,
-                1 => 150,
-                2 => 100,
-                3 => 50,
-                4 => 0,
-              }
-            },
-            {
               name: '実績',
               data: {
                 0 => 200,
@@ -31,12 +21,38 @@
                 3 => 120,
               }
             },
+            {
+              name: '予測（悲観）',
+              data: {
+                0 => nil,
+                1 => nil,
+                2 => nil,
+                3 => 120,
+                4 => 80,
+                5 => 50,
+                6 => 20,
+                7 => 5,
+                8 => 0
+              }
+            },
+            {
+              name: '予測（標準）',
+              data: {
+                0 => nil,
+                1 => nil,
+                2 => nil,
+                3 => 120,
+                4 => 90,
+                5 => 55,
+                6 => 30,
+                7 => 0
+              }
+            },
           ],
-          min: 0,
           max: 250,
-          colors: ['#AAA', '#714CA5'],
+          colors: ['#714CA5', '#dc3545', '#4FA533'],
           height: '60vh',
-          curve: false
+          curve: false,
         ) %>
       </div>
     </div>
