fix input border

--- a/app/assets/stylesheets/bootstrap_variables.scss
+++ b/app/assets/stylesheets/bootstrap_variables.scss
@@ -62,6 +62,7 @@ $paragraph-margin-bottom:     0 !default;
 $headings-margin-bottom:      0 !default;
 $label-margin-bottom:         .25rem !default;
 
+$input-border-color:        $gray-300 !default;
 $input-btn-focus-width:     .1rem !default;
 $input-focus-border-color:  $yellow !default;
 $input-btn-focus-color:     $yellow !default;
