add relase plan

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,6 +9,9 @@
     <%= link_to 'Feature Detail', page_url(:show_feature) %>
   </li>
   <li>
-    <%= link_to 'Release Plan', page_url(:release_plan) %>
+    <%= link_to 'Relase Plan', page_url(:release_plan) %>
+  </li>
+  <li>
+    <%= link_to 'Release Burndown', page_url(:release_burndown) %>
   </li>
 </ul>
