--- a/app/views/pages/new_feature.html.erb
+++ b/app/views/pages/new_feature.html.erb
@@ -14,15 +14,9 @@
         <form>
           <div class="form-group">
             <label>
-              タイトル:
+              フィーチャーの内容
             </label>
-            <input type="text" placeholder="フィーチャーをひとことで表すと？" class="form-control">
-          </div>
-          <div class="form-group">
-            <label>
-              詳細:
-            </label>
-            <textarea class="form-control" rows="3"></textarea>
+            <textarea class="form-control" rows="3" placeholder="ex: ユーザーストーリー"></textarea>
           </div>
           <div class="frm-Actions">
             <button class="btn btn-success">
