--- a/app/views/pages/show_feature.html.erb
+++ b/app/views/pages/show_feature.html.erb
@@ -13,13 +13,7 @@
       <div class="fe-Background fe-Background-lg">
         <div class="fe-Detail">
           <div class="fe-Detail_Section sw-Editable">
-            <h1 class="fe-Title fe-Title-lg">
-              Todoリストの自動保存
-            </h1>
-            <%= link_to '編集する', '#', class: 'sw-Editable_Action sw-Link sw-Link-sm' %>
-          </div>
-          <div class="fe-Detail_Section sw-Editable">
-            <p class="fe-Description">
+            <p class="fe-Content">
               ユーザーとして、Todoリストが自動で保存されて欲しい。
               <br>
               それは、保存するのを忘れることがあるからだ。
